Basic weather module added
Simple weather with icon and temp added. geo location now returns google
data to be extracted

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ body {
   float: left;
   font-size: 40px;
   }
+   #Date {
+  float: left;
+  font-size: 30px;
+  }
   .top-right{
   float: right;
+  font-size: 40px;
   }
