--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,38 @@
 body {
-  background-color: black;
-  color: #fff;
-  font-family: 'HelveticaNeue-UltraLight', 'Open Sans', sans-serif;
-  font-weight: 300;
-  position: relative;
-  }
-  .top-left {
-  float: left;
-  font-size: 40px;
-  }
-   #Date {
-  float: left;
+    background-color: black;
+    color: #fff;
+    font-family: 'HelveticaNeue-UltraLight', 'Open Sans', sans-serif;
+    font-weight: 300;
+    position: relative;
+}
+.top-left {
+    float: left;
+    font-size: 40px;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+#Date {
+    float: left;
+    font-size: 30px;
+    
+}
+.top-right {
+    float: right;
+    font-size: 40px;
+    max-width:130px;
+    
+}
+#daySummary {
+    float: right;
+    font-size: 10px;
+   
+}
+.bottom{
+  position:fixed;
+  width:100%;
+  height:40px;
+  padding:10px;
+  bottom:0px;
+  text-align: center;
   font-size: 30px;
-  }
-  .top-right{
-  float: right;
-  font-size: 40px;
-  }
+}
