--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,12 @@ body {
   width:100%;
   height:40px;
   padding:10px;
-  bottom:0px;
+  padding-bottom: 40px;
+  bottom:20px;
   text-align: center;
   font-size: 30px;
+}
+#news{
+  padding-bottom: 50px;
+  font-size: 20px;
 }
