--- a/css/main.css
+++ b/css/main.css
@@ -118,3 +118,15 @@ html,body {
   height:30px;
   /*float: right;*/
 }
+#albumArt{
+  color: red;
+  height: 150px;
+  width: 150px;
+  border-style: solid;
+  float: left;
+}
+#art{
+    max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
+}
